# claudy

./: .gitignore  PERSONALITY-ENGINE-DESIGN.md  PERSONALITY-ENGINE-IMPLEMENTATION.md  README.md  demo-video.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: lottie-animation-guide.md  rive-animation-guide.md
docs/plans/: 2025-02-04-theme-system-design.md  2025-02-04-theme-system-implementation.md  2026-01-28-claudy-design.md  2026-01-28-claudy-implementation.md  2026-01-29-websocket-bridge-design.md  2026-02-01-engine-refactoring-design.md  cleanup-post-mvp.md
public/animations/: README.md  breathing-idle.json  idle.json  intro.json
src/: claudy-css.ts  claudy.css  claudy.ts  config.html  config.ts  index.html  main.ts  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/personality/: comments.toml  keywords.toml
src-tauri/src/: config.rs  lib.rs  main.rs  state.rs  watcher.rs  websocket.rs  window.rs
src-tauri/src/personality/: analyzer.rs  config.rs  decider.rs  engine.rs  mod.rs  types.rs
src/engine/: context.ts
src/engine/animation/: animator.ts  index.ts  sprite-controller.ts  types.ts
src/engine/extraction/: file-classifier.ts  index.ts  parser.ts  session-tracker.ts  types.ts
src/engine/personality/: index.ts  selector.ts  types.ts
src/engine/personality/categories/: clippy.ts  debugging.ts  index.ts  session.ts  tools.ts
