[package]
name = "claudy"
version = "0.1.0"
description = "Claudy - Your Claude Code companion"
authors = [""]
edition = "2021"

[lib]
name = "claudy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"

[features]
default = ["custom-protocol", "tray-icon"]
custom-protocol = ["tauri/custom-protocol"]
tray-icon = []
