[package]
name = "claudy"
version = "0.1.0"
description = "Claudy - Your Claude Code companion"
authors = [""]
edition = "2021"
default-run = "claudy"

[lib]
name = "claudy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
clap = { version = "4", features = ["derive"] }
notify = "6"
dirs = "5"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
rand = "0.8"

[[bin]]
name = "claudy-cli"
path = "src/bin/claudy-cli.rs"

[features]
default = ["custom-protocol", "tray-icon"]
custom-protocol = ["tauri/custom-protocol"]
tray-icon = []

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
